--- a/public/classyPie.html
+++ b/public/classyPie.html
@@ -34,7 +34,7 @@
     </head>
 
     <body>
-        
+        <h1> FoozFoozFoozFoozFoozFooz </h1>
         <div class="page-wrapper">      
 
         <listing-page>      
